--- a/theStyle.css
+++ b/theStyle.css
@@ -22,3 +22,12 @@ h1 {
                 background-color: green;
                 margin: 250px;
             }
+
+            button {
+                background-color:pink;
+                padding: 10px;
+                border-radius:100%;
+            }
+            button:hover{
+                background-color:aqua; 
+            }
