--- a/theStyle.css
+++ b/theStyle.css
@@ -31,3 +31,6 @@ h1 {
             button:hover{
                 background-color:aqua; 
             }
+            a {
+                text-decoration: none; 
+            }
