--- a/theStyle.css
+++ b/theStyle.css
@@ -7,8 +7,8 @@ h1 {
 			}
 
             p {
-                background-color: rgb(255, 255, 255);
-                color:rgb(255,155,155);
+                background-color: rgb(199, 199, 255);
+                color:#FF4500;
                 border: solid 10px;
                 padding: 4vw;  
             }
