--- a/theStyle.css
+++ b/theStyle.css
@@ -10,7 +10,8 @@ h1 {
                 background-color: rgb(199, 199, 255);
                 color:#FF4500;
                 border: solid 10px;
-                padding: 4vw;  
+                padding: 4vw; 
+                text-align: justify; 
             }
 
             #theSpecial {
@@ -19,17 +20,19 @@ h1 {
             }
 
             .theDescription {
-                background-color: green;
+                background-color: rgb(151, 170, 151);
                 margin: 250px;
             }
 
             button {
-                background-color:pink;
+                background-color:salmon;
                 padding: 10px;
-                border-radius:100%;
+                border-radius: 30%;
+                color:aliceblue;
+               
             }
             button:hover{
-                background-color:aqua; 
+                background-color:green; 
             }
             a {
                 text-decoration: none; 
