--- a/week3/randStyle.css
+++ b/week3/randStyle.css
@@ -3,12 +3,18 @@ body {
 }
 header {
   
-       width: 100px; /* Set equal width and height */
-      height: 100px;
+    /*  width: 200px;Set equal width and height */
+     /* height: 200px;
       background-color: orangered; /* Optional: fill with a color */
-      border-radius: 50%; /* Essential for creating the circle */
+     /*   border-radius: 50%;
+      align-items: center;
+      /* Essential for creating the circle */
       /* Optional: Add a border for an outline */
       /* border: 2px solid darkblue; */
+      width: 20rem;
+  height: 10rem;
+  background-color: orangered;
+  border-radius: 10rem 10rem 0 0;
 }
 
 div {
@@ -17,8 +23,8 @@ div {
     font-size: 36px;
     padding: 3vw;
     /* display:flex; */
-    /* flex-direction: column; */
-    text-align: center;
+    flex-direction: column;
+    align-items: center;
     /* position: absolute; */
   
 }
@@ -27,6 +33,5 @@ div {
 p {
     background-color: green;
     margin:1vw; 
-    text-align:left;
   
 }
