--- a/week3/randStyle.css
+++ b/week3/randStyle.css
@@ -18,10 +18,10 @@ header {
 }
 
 div {
-    background-color: yellow;
+    
     font-family: "Bodoni Moda", serif;
     font-size: 36px;
-    padding: 3vw;
+    padding-left: 10vw;
     /* display:flex; */
     flex-direction: column;
     align-items: center;
@@ -31,7 +31,7 @@ div {
 
 
 p {
-    background-color: green;
+    
     margin:1vw; 
   
 }
