--- a/week3/randStyle.css
+++ b/week3/randStyle.css
@@ -29,9 +29,25 @@ div {
   
 }
 
+ /*.b {
+    display: inline-block;
+    width: 20px;
+    height: 10rem;
+    background-color: red;
+} */
 
 p {
-    
     margin:1vw; 
-  
+}
+
+button {
+    text-align: left; 
+    background-color: white; 
+    width: 3rem; 
+    height: 1rem; 
+    color: grey;
+    border: solid 1px;
+}
+button:hover{
+     background-color:rgb(255, 217, 25); 
 }
