--- a/week3/theStyle.css
+++ b/week3/theStyle.css
@@ -32,15 +32,15 @@ p {
 body{
   margin: 0;
   background: #9fb0c6;
-  font-family: "Anton", sans-serif;
+  font-family: 'Arial Bold', sans-serif;
 }
 
 .poster{
   position: relative;
-  height: 200vh;
+  height: 100vh;
 }
 
-.bg {
+.b {
   position: absolute;
   font-size: 20vw;
   font-weight: 500;
@@ -48,10 +48,10 @@ body{
   transform: scaleX(2) rotate(90deg);
 }
 
-.bg:nth-child(1) { top: 3vh;  left: 40vw; }
-.bg:nth-child(2) { top: 30vh; left: 21vw; }
-.bg:nth-child(3) { top: 60vh; left: 35vw; }
-.bg:nth-child(4) { top: 90vh; left: 30vw; }
+.b:nth-child(1) { top: 3vh;  right: 40vw; }
+.b:nth-child(2) { top: 23vh; right: 55vw; }
+.b:nth-child(3) { top: 45vh; right: 35vw; }
+.b:nth-child(4) { top: 63vh; right: 55vw; }
 
 .fg {
   position: absolute;
@@ -61,7 +61,7 @@ body{
   color: black;
 }
 
-.fg:nth-child(5) { top: 37vh;  left: 5vw; }
-.fg:nth-child(6) { top: 67vh; left: 20vw; }
+.fg:nth-child(5) { top: 27vh;  left: 23vw; }
+.fg:nth-child(6) { top: 67vh; left: 33vw; }
 .fg:nth-child(7) { top: 24vh;  left: 35vw; }
 .fg:nth-child(8) { top: 57vh; left: 55vw; }
