--- a/week4/theStyle.css
+++ b/week4/theStyle.css
@@ -1,47 +1,50 @@
-h1 {
-				color: #FF4500
-			}
 
-			body {
-				background: #000080;
-			}
+/* 
+a {
+    text-decoration: none; 
+} 
+*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+ body {
+    display: flex; 
+ }
+img {
+  max-width: 40%;
+  display: block;
+  width: 40%;
+}
 
-            p {
-                background-color: rgb(199, 199, 255);
-                color:#FF4500;
-                border: solid 10px;
-                padding: 4vw; 
-                text-align: justify; 
-            }
-
-            #theSpecial {
-                color: orange;
-                padding: 100px;
-            }
-
-            .theDescription {
-                background-color: rgb(151, 170, 151);
-                margin: 250px;
-            }
-
-            button {
-                background-color:salmon;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                font-weight: 700;
-                padding: 10px;
-                border-color: #ff00dd;
-                border-radius: 30%;
-                color:aliceblue;
-    text-shadow:
-    -1px -1px 0 #ff00dd,
-    1px -1px 0 #ff00dd,
-    -1px 1px 0 #ff00dd,
-    1px 1px 0 #ff00dd; 
-               
-            }
-            button:hover{
-                background-color:green; 
-            }
-            a {
-                text-decoration: none; 
-            }
+.parent {
+  position: relative;
+  top: 20%;
+  left: 45%;
+}
+.parent .box {
+  position: absolute;
+  display: flex;
+  -webkit-box-pack: center;
+        justify-content: center;
+  -webkit-box-align: center;
+        align-items: center;
+}
+.parent .box.eyes button{
+    border: none;
+    background-color: red;
+    width: 300px;
+    height: 35px;
+  top: 4%;
+  left: 15%;
+  font-family: 'BBH Sans Hegarty', serif;
+  font-size: 25px;
+  transform: rotate(-30deg);
+}
+.parent .box.eyes button:hover {
+  transform: rotate(150deg);
+}
+.div1 {
+    white-space: nowrap;
+    display: block;
+}
