--- a/week4/theStyle.css
+++ b/week4/theStyle.css
@@ -20,7 +20,7 @@ img {
 .parent {
   position: relative;
   top: 20%;
-  left: 45%;
+  left: 42%;
 }
 .parent .box {
   position: absolute;
@@ -36,7 +36,7 @@ img {
     width: 300px;
     height: 35px;
   top: 4%;
-  left: 15%;
+  left: -10px;
   font-family: 'BBH Sans Hegarty', serif;
   font-size: 25px;
   transform: rotate(-30deg);
