--- a/week4/theStyle2.css
+++ b/week4/theStyle2.css
@@ -22,11 +22,15 @@ h1 {
 }
 h1:hover{
 animation: fadein 3s;
+animation: fadeout 3s;
 }
 @keyframes fadein {
     from {opacity:1;}
     to {opacity:0;}
-    
+}
+@keyframes fadeout {
+    from {opacity:0;}
+    to {opacity:1;}
 }
 #pos {
     position:fixed; 
