--- a/week4/theStyle.css
+++ b/week4/theStyle.css
@@ -36,7 +36,7 @@ img {
     width: 300px;
     height: 35px;
   top: 4%;
-  left: -10px;
+  left: 15%;
   font-family: 'BBH Sans Hegarty', serif;
   font-size: 25px;
   transform: rotate(-30deg);
